# python-trainee-assignment

./: pyproject.toml
Python_trainee_assignment/: FromMatrixToList.py
Test/: Test_FromMatrixToList.py
